# locus

./: locoprop_scaling_law.py  main.py  probe_ablate.py  probe_push2.py  probe_push3.py  probe_push4.py  pyproject.toml  sanity.py  scaling_ladder.py  sweep_launcher.py
bench/: __init__.py  presigned_ssh_worker.py
docs/: mining.md  sdk.md  validator.md
findings/: locoprop_alias_bug.md
locus_core/: __init__.py  cli.py  ir.py  paths.py  protocol.py  signatures.py  wallet_crypto.py
locus_miner/: neuron.py  worker.py
locus_orchestrator/: run_manager.py  scheduler.py  streaming.py
locus_runtime/: crypto.py  distributed_executor.py  eval.py  executor.py  lifecycle.py  sharded_tensor.py
locus_tasks/: gpt_pipe.py
locus_v3/: README.md
locus_v3/bench/: lium_fleet.py
locus_v3/locus_core/: compat.py  paths.py  protocol.py
locus_v3/locus_miner/: __init__.py  worker.py
locus_v3/locus_orchestrator/: __init__.py  run_manager.py  scheduler.py
locus_v3/locus_runtime/: __init__.py  storage.py  tensor_io.py
locus_v3/locus_tasks/: __init__.py  mlp.py
locus_v3/locus_validator/: neuron.py  verifier.py
locus_v3/tests/: conftest.py  test_cli.py  test_executor.py  test_lifecycle.py  test_miner_validator.py  (+2 more)
locus_validator/: __init__.py  audit.py  audit_jobs.py  neuron.py  subnet.py  verifier.py
modded-nanogpt/: sweep.sh  sweep_batch.sh  sweep_final.sh  sweep_long.sh  train_gpt.py  train_t3.py  triton_kernels.py  tune_batch.py
scripts/: __init__.py  generate_ed25519_hotkey.py
tests/: test_audit_jobs.py  test_cli.py  test_crypto.py  test_streaming.py
